--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@
 version: '3.7'
 services:
   # Postgres
-  db_apps:
+  db:
     image: postgres
     env_file:
-      - ./env.dev
+      - env.dev
     ports:
       - 5432:5432
     expose:
@@ -15,16 +15,17 @@ services:
     networks:
       - main  # Add the container to the network "main"
 
-  api_apps:
+  api:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./Dockerfile
     env_file:
-      - ./env.dev
-    command: python3 api/manage.py runserver 0.0.0.0:8000
+      - env.dev
+    command: python3 manage.py runserver 0.0.0.0:8000
     ### command: gunicorn --pythonpath api _config.wsgi --bind 0.0.0.0:8000
+    entrypoint: ../docker-entrypoint.sh
     volumes:
-      - .:/api
+      - .:/code
     ports:
       - 8000:8000
     expose:
@@ -32,7 +33,43 @@ services:
     networks:
       - main  # Add the container to the network "main"
     depends_on:
-      - db_apps
+      - db
+      - redis
+
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+    expose:
+      - 6379
+    networks:
+      - main  # Add the container to the network "main"
+
+  celery:
+    build: .
+    env_file:
+      - env.dev
+    command: celery -A _api worker -l info
+    volumes:
+      - .:/code
+    networks:
+      - main  # Add the container to the network "main"
+    depends_on:
+      - db
+      - redis
+
+  celery-beat:
+    build: .
+    env_file:
+      - env.dev
+    command: celery -A _api beat -l info
+    volumes:
+      - .:/code
+    networks:
+      - main  # Add the container to the network "main"
+    depends_on:
+      - db
+      - redis
 
 networks:
   main:
